; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/sh2_dynarec/extr_sh2_dynarec.c_system_alloc.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/sh2_dynarec/extr_sh2_dynarec.c_system_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.regstat = type { i64 }

@CCREG = common dso_local global i32 0, align 4
@opcode = common dso_local global i32* null, align 8
@SR = common dso_local global i32 0, align 4
@VBR = common dso_local global i32 0, align 4
@MOREG = common dso_local global i32 0, align 4
@minimum_free_regs = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @system_alloc(%struct.regstat* %0, i32 %1) #0 {
  %3 = alloca %struct.regstat*, align 8
  %4 = alloca i32, align 4
  store %struct.regstat* %0, %struct.regstat** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.regstat*, %struct.regstat** %3, align 8
  %6 = load i32, i32* %4, align 4
  %7 = call i32 @alloc_cc(%struct.regstat* %5, i32 %6)
  %8 = load %struct.regstat*, %struct.regstat** %3, align 8
  %9 = load i32, i32* @CCREG, align 4
  %10 = call i32 @dirty_reg(%struct.regstat* %8, i32 %9)
  %11 = load i32*, i32** @opcode, align 8
  %12 = load i32, i32* %4, align 4
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds i32, i32* %11, i64 %13
  %15 = load i32, i32* %14, align 4
  %16 = icmp eq i32 %15, 12
  br i1 %16, label %17, label %42

17:                                               ; preds = %2
  %18 = load %struct.regstat*, %struct.regstat** %3, align 8
  %19 = load i32, i32* %4, align 4
  %20 = call i32 @alloc_reg(%struct.regstat* %18, i32 %19, i32 15)
  %21 = load %struct.regstat*, %struct.regstat** %3, align 8
  %22 = call i32 @dirty_reg(%struct.regstat* %21, i32 15)
  %23 = load %struct.regstat*, %struct.regstat** %3, align 8
  %24 = load i32, i32* %4, align 4
  %25 = load i32, i32* @SR, align 4
  %26 = call i32 @alloc_reg(%struct.regstat* %23, i32 %24, i32 %25)
  %27 = load %struct.regstat*, %struct.regstat** %3, align 8
  %28 = load i32, i32* %4, align 4
  %29 = load i32, i32* @VBR, align 4
  %30 = call i32 @alloc_reg(%struct.regstat* %27, i32 %28, i32 %29)
  %31 = load %struct.regstat*, %struct.regstat** %3, align 8
  %32 = load i32, i32* %4, align 4
  %33 = load i32, i32* @MOREG, align 4
  %34 = call i32 @alloc_reg(%struct.regstat* %31, i32 %32, i32 %33)
  %35 = load %struct.regstat*, %struct.regstat** %3, align 8
  %36 = load i32, i32* %4, align 4
  %37 = call i32 @alloc_reg_temp(%struct.regstat* %35, i32 %36, i32 -1)
  %38 = load i32*, i32** @minimum_free_regs, align 8
  %39 = load i32, i32* %4, align 4
  %40 = sext i32 %39 to i64
  %41 = getelementptr inbounds i32, i32* %38, i64 %40
  store i32 1, i32* %41, align 4
  br label %42

42:                                               ; preds = %17, %2
  %43 = load %struct.regstat*, %struct.regstat** %3, align 8
  %44 = getelementptr inbounds %struct.regstat, %struct.regstat* %43, i32 0, i32 0
  store i64 0, i64* %44, align 8
  ret void
}

declare dso_local i32 @alloc_cc(%struct.regstat*, i32) #1

declare dso_local i32 @dirty_reg(%struct.regstat*, i32) #1

declare dso_local i32 @alloc_reg(%struct.regstat*, i32, i32) #1

declare dso_local i32 @alloc_reg_temp(%struct.regstat*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
